<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_info_details"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_add_contact"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_add_contact" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_maps"
            android:title="@string/menu_maps" />
        <item
            android:id="@+id/nav_actions"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_actions" />
        <item
            android:id="@+id/nav_videoshow"
            android:icon="@drawable/ic_menu_videoshow"
            android:title="@string/menu_video" />
        <item
            android:id="@+id/nav_animation"
            android:icon="@drawable/ic_menu_animation"
            android:title="@string/menu_animation" />
    </group>
</menu>